# cs-236-lab-2

./: CMakeLists.txt
Project-1-Code/: AddAutomaton.h  Automaton.h  CommentAutomaton.cpp  CommentAutomaton.h  IDAutomaton.cpp  Lexer.cpp  QMarkAutomaton.h  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  Token.cpp  UndefinedAutomaton.cpp  main.cpp  makefile
Project-1-Code/Lab1PassOffCasesOfficial/1-70/: test.txt
Project-2-Code/: AddAutomaton.cpp  ColonAutomaton.cpp  Database.h  Datalog.h  FactsAutomaton.h  Graph.h  Header.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parser.cpp  Parser.h  PeriodAutomaton.h  QueriesAutomaton.h  Relation.cpp  Relation.h  RightParenAutomaton.cpp  SchemesAutomaton.cpp  StringAutomaton.h  Tuple.h  UndefinedAutomaton.h  lab4  main.cpp
Project-2-Code/Lab/: CommaAutomaton.h  CommentAutomaton.cpp  Database.h  Datalog.h  FactsAutomaton.cpp  Header.cpp  Header.h  Interpreter.cpp  Interpreter.h  Parser.cpp  QMarkAutomaton.cpp  Relation.cpp  Relation.h  Rule.h  RulesAutomaton.cpp  Tuple.h  UndefinedAutomaton.cpp  main.cpp
Project-2-Code/lab4.dSYM/Contents/Resources/DWARF/: lab4
Project-3-Code/: IDAutomaton.cpp  LeftParenAutomaton.cpp  Parameter.h  PeriodAutomaton.cpp  Predicate.h  QueriesAutomaton.cpp  Relation.cpp  RightParenAutomaton.h  Rule.h  StringAutomaton.cpp  Token.h  Tuple.h  main.cpp
Project1_Starter_Code (1)/: CommentAutomaton.cpp  EOFAutomaton.cpp  EOFAutomaton.h  FactsAutomaton.cpp  IDAutomaton.cpp  IDAutomaton.h  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  QueriesAutomaton.cpp  RulesAutomaton.cpp  SchemesAutomaton.cpp  StringAutomaton.cpp  Token.h  UndefinedAutomaton.cpp  main.cpp
Project1_Starter_Code (1)/Lab1PassOffCases/: test.txt
Project1_Starter_Code (1)/Lab1PassOffCasesOfficial/1-70/: test.txt
